# ParallelOptimizationEngine

./: CMakeLists.txt  README.md  build.sh  dockerfile  report.md
python/: ml_agent.py  requirements.txt  run_simulation.py  test_correctness.py  visualize.py
src/core/: Agent.cpp  Agent.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  ThreadPool.hpp  test_correctness.cpp  util.cpp  util.hpp
src/cuda/: CMakeLists.txt  CudaEngine.cu  CudaEngine.hpp  kernel.cu
src/python_bindings/: CMakeLists.txt  binding.cpp
